<resources>
    <string name="app_name">Dagger2 and Common Retrofit</string>

    <string name="some_error">Some Error Occurred!</string>


    <!--login-->
    <string name="enter_reg_mob">Registered Mobile No.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="didnt_rcv_otp">Didn’t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>



    <!--error messages-->
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="title_activity_dashboard_navigation">DashboardNavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_call_us">Call Us</string>
    <string name="nav_email_us">Email Us</string>
    <string name="nav_logout">Logout</string>
    <string name="select">SELECT</string>
    <string name="notifications">Notifications</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="invalid_state">Invalid State</string>
    <string name="ok">Ok</string>
    <string name="invalid_state_msg">Can\'t proceed further. Please contact nutritionist</string>
    <string name="info_double_tap_to_exit">Please click back again to exit</string>
    <string name="title_activity_weeks_calendar">WeeksCalendarActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text_Toolbar_Title">Toolbar Title</string>
    <string name="no_data_found">No data found</string>
    <string name="proceed">Proceed</string>
    <string name="reset">Reset</string>
    <string name="confirm">Confirm</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_msg_logout">loading..</string>
    <string name="dialog_cancel">cancel</string>


</resources>
