<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swiperefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_dashboard_navigation"
        android:layout_width="match_parent"
        android:id="@+id/inc_toolbar"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"

        >
        <!--
        app:headerLayout="@layout/nav_header_dashboard_navigation"
        app:menu="@menu/activity_dashboard_navigation_drawer"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                layout="@layout/nav_header_dashboard_navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/nav_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/menu_call_us"
                android:drawablePadding="16dp"
                android:padding="16dp"
                fontPath="fonts/sfprodisplay_medium.otf"

                android:text="@string/nav_call_us" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_divider" />


            <TextView
                android:id="@+id/nav_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/menu_email_us"
                android:drawablePadding="16dp"
                android:padding="16dp"
                fontPath="fonts/sfprodisplay_medium.otf"

                android:text="@string/nav_email_us" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_divider" />


            <TextView
                android:id="@+id/nav_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/menu_logout"
                android:drawablePadding="16dp"
                android:padding="16dp"
                fontPath="fonts/sfprodisplay_medium.otf"

                android:text="@string/nav_logout" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_divider" />


        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
</android.support.v4.widget.SwipeRefreshLayout>

